<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_qustion_list"
        android:icon="@drawable/ic_format_list_numbered_black_24dp"
        android:title="@string/all_questions_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bookmarked_list"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/bookmarked_questions"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share_app"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share_application"
        app:showAsAction="always" />
    <group android:id="@+id/admin">
        <item
            android:id="@+id/action_add_questions"
            android:icon="@drawable/ic_add_ques"
            android:title="@string/add_ques"
            app:showAsAction="always" />
    </group>
    <group android:id="@+id/others">
        <item
            android:id="@+id/action_about_me"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="@string/about_me"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_privacy_policy"
            android:icon="@drawable/privacy_icon"
            android:title="@string/privacy"
            app:showAsAction="ifRoom" />
    </group>
</menu>